Version 0.8.14   - XX XXX 2004
  * Fix spurious warning when doing x = not x
  * Fix spurious warning for invalid arg count when calling a staticmethod
  * Support Tk 8.4 and above in the GUI (change col= to column=)

Version 0.8.13   - 18 November 2003
  * Add -s/--shadowbuiltin option to warn when overriding a builtin
  * Add warning when assigning a variable to itself
  * Add warning when dividing a variable by itself
  * Add warnings when using a bit-wise operator with the same variable (a & a)
  * Add warning when passing a constant string to getattr()/setattr()
  * Add --special option to check for __special__ (reserved) method names
    and that their signature (argument count) is correct
  * Add warning for using __getattribute__ in an old-style class
  * Suppress 'self as first argument' warning for static and class methods
  * Add --classmethodargs option to specify first argument name
    for class methods

Version 0.8.12   - 23 December 2002
  * Add --isliteral option to warn when using is/is not against literal
    (e.g., XXX is 5    YYY is not 'abcdef', etc)
  * Add --modulo1 option to warn when using (expr % 1),
    which is constant when expr is an integer or string
  * Add -4/--noeffect option to disable warnings for 'Statement has no effect'
  * self is not first argument warning can be disabled with -S/--self ''
  * Don't print duplicate warnings when importing pychecker
  * Fix other spurious warnings when importing pychecker
  * Fix bug for spurious invalid arguments when passing a dict inline
  * Fix bug for spurious Statement has no effect when print >> x, ... ,
  * Add @option_file command line argument to read options from a file
  	(used on platforms which can't have too many options, ie Windows)
  * Fix several crashes
  * Line numbers should be close for Python 2.3 and if run on optimized code

Version 0.8.11   - 06 June 2002
  * Improve error message for syntax errors from user files
  * Fix pychecker.bat so it should work now